[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/Minecraft.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ControlsScreen.gd" type="Script" id=2]
[ext_resource path="res://TitleScreen.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.290196, 0.694118, 0.788235, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.258824, 0.611765, 0.694118, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.313726, 0.772549, 0.878431, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.290196, 0.694118, 0.788235, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.258824, 0.611765, 0.694118, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.313726, 0.772549, 0.878431, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.290196, 0.694118, 0.788235, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.258824, 0.611765, 0.694118, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.313726, 0.772549, 0.878431, 1 )

[sub_resource type="Theme" id=7]

[sub_resource type="DynamicFont" id=15]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.768627, 0.513726, 0.282353, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.662745, 0.443137, 0.247059, 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.835294, 0.552941, 0.301961, 1 )

[node name="TitleScreen" type="Node2D"]
z_index = 5
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 450, 390 )
zoom = Vector2( 7, 7 )

[node name="HomeScreen" type="ColorRect" parent="."]
margin_left = -1600.0
margin_top = -698.0
margin_right = 2400.0
margin_bottom = 1070.0
color = Color( 0.878431, 0.580392, 0.313726, 1 )

[node name="Title" type="ColorRect" parent="HomeScreen"]
margin_left = 508.0
margin_top = 63.0
margin_right = 3508.0
margin_bottom = 563.0
color = Color( 0.313726, 0.772549, 0.878431, 1 )

[node name="Label" type="Label" parent="HomeScreen/Title"]
margin_left = 56.0
margin_top = 96.0
margin_right = 202.0
margin_bottom = 112.0
rect_scale = Vector2( 20, 20 )
custom_fonts/font = SubResource( 1 )
text = "Gnome Man's Land"
align = 1

[node name="NewGame" type="Button" parent="HomeScreen"]
margin_left = 660.0
margin_top = 660.0
margin_right = 3360.0
margin_bottom = 960.0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 2 )

[node name="Label" type="Label" parent="HomeScreen/NewGame"]
margin_left = 268.0
margin_top = 56.0
margin_right = 414.0
margin_bottom = 72.0
rect_scale = Vector2( 15, 15 )
custom_fonts/font = SubResource( 1 )
text = "New Game"
align = 1

[node name="LoadGame" type="Button" parent="HomeScreen"]
margin_left = 660.0
margin_top = 1000.0
margin_right = 3360.0
margin_bottom = 1300.0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 3 )

[node name="Label" type="Label" parent="HomeScreen/LoadGame"]
margin_left = 268.0
margin_top = 56.0
margin_right = 414.0
margin_bottom = 72.0
rect_scale = Vector2( 15, 15 )
custom_fonts/font = SubResource( 1 )
text = "Load Game"
align = 1

[node name="Controls" type="Button" parent="HomeScreen"]
margin_left = 660.0
margin_top = 1340.0
margin_right = 3360.0
margin_bottom = 1640.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 5 )

[node name="Label" type="Label" parent="HomeScreen/Controls"]
margin_left = 268.0
margin_top = 56.0
margin_right = 414.0
margin_bottom = 72.0
rect_scale = Vector2( 15, 15 )
theme = SubResource( 7 )
custom_fonts/font = SubResource( 1 )
text = "Controls"
align = 1

[node name="ControlsScreen" type="ColorRect" parent="."]
margin_left = -1600.0
margin_top = -698.0
margin_right = 2400.0
margin_bottom = 1070.0
color = Color( 0.878431, 0.580392, 0.313726, 1 )
script = ExtResource( 2 )

[node name="Label" type="Label" parent="ControlsScreen"]
margin_left = 346.0
margin_top = 61.0
margin_right = 569.0
margin_bottom = 172.0
rect_scale = Vector2( 15, 15 )
custom_fonts/font = SubResource( 1 )
text = "Walk - WASD
Use Tool - Space
Interact - E
Sprint - Shift
Open/Close Inventory - Tab
Close Shop - Esc"
align = 1

[node name="Button" type="Button" parent="ControlsScreen"]
margin_left = 84.0
margin_top = 70.0
margin_right = 135.0
margin_bottom = 70.0
rect_scale = Vector2( 15, 15 )
custom_fonts/font = SubResource( 15 )
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
text = "BACK"

[connection signal="pressed" from="HomeScreen/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="HomeScreen/Controls" to="ControlsScreen" method="_on_Controls_pressed"]
[connection signal="pressed" from="ControlsScreen/Button" to="ControlsScreen" method="_on_Button_pressed"]
